--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,12 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@types/ramda": "^0.28.18"
   }
 }
